# comp_final_project

./: projectFinal.cpp
part2/: projectFinal.cpp
part3/: CMakeLists.txt  projectFinal.cpp
part4/: CMakeLists.txt  projectFinal_Christ.cpp  projectFinal_szhang.cpp
part5/: projectFinal.cpp
